# debfs

./: Cargo.toml  README.md
src/: main.rs
testdata/: foo_20.04.4_all.deb
testdata/foo_20.04.4_all/: control.tar.xz  data.tar.xz
testdata/foo_20.04.4_all/control/: conffiles  control  md5sums  postinst
testdata/foo_20.04.4_all/data/etc/: foo
testdata/foo_20.04.4_all/data/usr/share/doc/foo/: README.md  bar.md
